Revision history for DBD::Oracle

{{$NEXT}}

  [BUG FIXES]

  orphaned test code in t/28_array_bind.t - (GH#64, dzort)
  Made the code run so it is nolonger orphaned

1.791     2019-07-22

  [BUG FIXES]

  Fix Avoid GCC-ism so that HP-UX can compile (GH#92, Dean Hamstead)

  Destroy envhp with last dbh (GH#93, GH#89, Dean Hamstead, CarstenGrohmann)


1.76      2018-11-22

  No Changes from 1.75, we just botched up publishing to CPAN

1.75   2018-11-22

  No Changes from 1.75_42

1.75_42   2018-08-22

  [BUG FIXES]

  Fix potential buffer overflow in dbdimp.c - (GH#57, Various)

  Fix truncation error on ROWIDs from an Index Organized table as they are
  not a fixed length. Code now allows up to a size of 2000.
  (GH#31, Martin J. Evans)

  Various fixes for compiler warnings, OCI handle leaks, and OCI programming
  errors. - (PR#38, Dag Lem)

  Corrections to t/25plsql.t - (GH#56, kjetillll)

  Fix: Invalid binding call for large undef arrays. - (GH#36, GH ghost)

  Fix: compile warnings about int vs long unsigned. - (PR#62, Dean Hamstead)

  Fix: Spelling errors in pod. - (PR#63, Jochen Hayek)

  Fix: Various changes in pod. - (PR#54, Mike O'Regan)

  [ENHANCEMENT]

  Connection informational messages like "ORA-28002: the password will
  expire" were lost. Thanks to J.D. Laub.

  Add new path to find 64 bit Oracle client on MAC OSX - (GH#20, Martin J. Evans)

  Ignore constraints which are not enabled in primary/foreign key_info
  (GH#23, Martin J. Evans)

  dist.init overhaul. - (PR#62, Dean Hamstead)

  Mailmap and TODO changes. - (PR#62, Dean Hamstead)

  Travis CI testing. - (PR#62, Dean Hamstead)
  Note: this uses Oracle XE which doesn't provide enough features to test
  the entire suite. Nor does it test anything other than Linux on Linux.
  Release tests are also NOT yet run in Travis.

  Rewrite of DRCP session pooling to make it work as intended - (PR#38, Dag Lem)

  Support for Oracle Fast Application Notification (FAN). - (PR#38, Dag Lem)
