@@ -8,7 +8,7 @@ copyright_holder = Tim Bunce
 copyright_year   = 1994
 main_module = lib/DBD/Oracle.pm
 
-version = 1.791
+version = 1.792
 
 ; Generate files
 
